--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,120 @@
-Flask
-requests
-re
-FlaskBehindProxy
-openai
-urllib3
-textblob
-secrets
-sqlite3
-pandas
-matplotlib
-numpy
-certifi
-json
-os
-pyqt5
-datetime
-python-dateutil
-plotly
-gspread
-oauth2client
-bcrypt
+aiohttp==3.8.5
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
+async-timeout==4.0.3
+attrs==23.1.0
+backoff==1.11.1
+beautifulsoup4==4.12.2
+blinker==1.8.2
+bs4==0.0.1
+certifi==2023.5.7
+charset-normalizer==3.2.0
+click==8.1.7
+contourpy==1.2.1
+cssselect==1.2.0
+cycler==0.12.1
+dataclasses-json==0.6.1
+distlib==0.3.7
+distro==1.9.0
+faiss-cpu==1.7.4
+feedfinder2==0.0.4
+feedparser==6.0.11
+filelock==3.13.1
+Flask==3.0.3
+flask-behind-proxy==0.1.1
+Flask-WTF==1.2.1
+fonttools==4.53.1
+fpdf==1.7.2
+frozenlist==1.4.0
+fsspec==2023.10.0
+greenlet==3.0.3
+gTTS==2.3.2
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.17.3
+idna==3.4
+itsdangerous==2.2.0
+jieba3k==0.35.1
+Jinja2==3.1.2
+joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+kiwisolver==1.4.5
+langchain==0.0.330
+langsmith==0.0.57
+libgen-api==1.0.1
+lxml==4.9.2
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+matplotlib==3.9.1
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+networkx==3.2.1
+newspaper3k==0.2.8
+newspaper4k==0.9.3.1
+nltk==3.8.1
+numpy==1.26.1
+openai==0.28.0
+packaging==23.2
+pandas==2.2.2
+Pillow==10.1.0
+pip==23.3.1
+platformdirs==3.11.0
+playsound==1.3.0
+playwright==1.45.1
+plotly==5.22.0
+pydantic==2.4.2
+pydantic_core==2.10.1
+pyee==11.1.0
+pyparsing==3.1.2
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.14
+PyQt5_sip==12.15.0
+python-dateutil==2.9.0.post0
+python-docx==0.8.11
+python-dotenv==1.0.0
+pytube==10.9.3
+pytube3==9.6.4
+pytz==2024.1
+PyYAML==6.0.1
+redis==5.0.0
+regex==2023.10.3
+requests==2.31.0
+requests-file==2.1.0
+safetensors==0.4.0
+scikit-learn==1.3.2
+scipy==1.11.4
+setuptools==68.2.2
+sgmllib3k==1.0.0
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4.1
+spotify==0.10.2
+spotipy==2.23.0
+SQLAlchemy==2.0.23
+sympy==1.12
+tabulate==0.9.0
+tenacity==8.2.3
+textblob==0.18.0.post0
+threadpoolctl==3.2.0
+tiktoken==0.5.1
+tinysegmenter==0.3
+tldextract==5.1.2
+tokenizers==0.14.1
+torch==2.1.2
+torchaudio==2.1.2
+torchvision==0.16.2
+tqdm==4.66.1
+transformers==4.35.0
+typing_extensions==4.7.1
+typing-inspect==0.9.0
+tzdata==2024.1
+urllib3==2.0.4
+virtualenv==20.24.6
+Werkzeug==3.0.3
+wheel==0.41.2
+WTForms==3.1.2
+yarl==1.9.2
